Complete frontend for address table with styles and functional actions and fix sushi align!!! :)
Finalized the frontend development for the address table in the user profile:

- Applied styling to the address table for a cohesive and attractive appearance.
- Implemented functionality for the confirm and edit actions.
- Ensured that users can add, confirm, and edit addresses seamlessly.

--- a/src/pages/Profile/profileDirections.css
+++ b/src/pages/Profile/profileDirections.css
@@ -69,7 +69,7 @@
 
 .ProfileDirections-active{
     background-color: transparent;
-    width: 20%;
+    width: 50%;
     padding: .5em 0;
     border: none;
     color: #1b4948;
